--- a/wallabag/Storyboard/Article.storyboard
+++ b/wallabag/Storyboard/Article.storyboard
@@ -27,6 +27,21 @@
                                     <segue destination="Qo1-bX-YK8" kind="embed" id="gwI-f4-xly"/>
                                 </connections>
                             </containerView>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Suo-J7-HtF">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                            <containerView hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VlZ-s8-r56">
+                                <rect key="frame" x="0.0" y="631" width="414" height="182"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <connections>
+                                    <segue destination="d2e-bz-LXm" kind="embed" id="DHp-lb-i18"/>
+                                </connections>
+                            </containerView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cmR-l8-ha4">
                                 <rect key="frame" x="0.0" y="813" width="414" height="49"/>
                                 <items>
@@ -38,6 +53,11 @@
                                     <barButtonItem image="starred" id="VcU-fa-V5f" userLabel="Star boutton">
                                         <connections>
                                             <action selector="star:" destination="zsG-x9-2za" id="RwX-qv-2d9"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem title="Item" image="tag" id="oQC-bp-WHy">
+                                        <connections>
+                                            <action selector="tagTapped:" destination="zsG-x9-2za" id="OzN-YG-tA8"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Eb2-gX-W3Y"/>
@@ -54,14 +74,6 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Suo-J7-HtF">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
-                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <wkWebViewConfiguration key="configuration">
-                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
-                                    <wkPreferences key="preferences"/>
-                                </wkWebViewConfiguration>
-                            </wkWebView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -103,6 +115,7 @@
                         <outlet property="shareButton" destination="YkI-7q-ROS" id="6HG-PF-XDI"/>
                         <outlet property="speechButton" destination="3vd-F9-MfW" id="qky-Bl-1uV"/>
                         <outlet property="starButton" destination="VcU-fa-V5f" id="YqQ-L0-xvZ"/>
+                        <outlet property="tagsView" destination="VlZ-s8-r56" id="JW5-Qv-qCp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hfU-tW-LRl" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -178,6 +191,78 @@
             </objects>
             <point key="canvasLocation" x="5552.8000000000002" y="649.47526236881561"/>
         </scene>
+        <!--Article Tag View Controller-->
+        <scene sceneID="mxu-ZB-xAz">
+            <objects>
+                <viewController id="d2e-bz-LXm" customClass="ArticleTagViewController" customModule="wallabag" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="C3U-jl-cY6"/>
+                        <viewControllerLayoutGuide type="bottom" id="KYE-GS-l4D"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="aJE-qm-Pa2">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="182"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I3T-6S-n7w">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                <items>
+                                    <navigationItem title="Tag" id="QiO-7O-MfI">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="7SO-Tp-7Cq">
+                                            <connections>
+                                                <action selector="addTag:" destination="d2e-bz-LXm" id="QOR-t8-Y8w"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="H0D-TD-H6M">
+                                <rect key="frame" x="0.0" y="44" width="414" height="138"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tagIdentifier" textLabel="9ao-yW-8pQ" style="IBUITableViewCellStyleDefault" id="b0y-JQ-jet">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="b0y-JQ-jet" id="wYa-pa-7i0">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="9ao-yW-8pQ">
+                                                    <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="d2e-bz-LXm" id="JDj-t2-DGo"/>
+                                    <outlet property="delegate" destination="d2e-bz-LXm" id="ZLX-W3-6fZ"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="H0D-TD-H6M" secondAttribute="trailing" id="5RS-Xg-R0N"/>
+                            <constraint firstItem="H0D-TD-H6M" firstAttribute="top" secondItem="I3T-6S-n7w" secondAttribute="bottom" id="CGX-OB-ZEa"/>
+                            <constraint firstAttribute="bottom" secondItem="H0D-TD-H6M" secondAttribute="bottom" id="Eqt-gv-FvY"/>
+                            <constraint firstItem="H0D-TD-H6M" firstAttribute="top" secondItem="I3T-6S-n7w" secondAttribute="bottom" id="GDS-AQ-5aS"/>
+                            <constraint firstAttribute="trailing" secondItem="I3T-6S-n7w" secondAttribute="trailing" id="aow-5E-fTH"/>
+                            <constraint firstItem="I3T-6S-n7w" firstAttribute="top" secondItem="aJE-qm-Pa2" secondAttribute="top" id="dcW-s0-Ksg"/>
+                            <constraint firstItem="I3T-6S-n7w" firstAttribute="leading" secondItem="aJE-qm-Pa2" secondAttribute="leading" id="rDd-Jr-nLd"/>
+                            <constraint firstItem="H0D-TD-H6M" firstAttribute="leading" secondItem="aJE-qm-Pa2" secondAttribute="leading" id="xie-TU-PRL"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="H0D-TD-H6M" id="kYk-XP-Vwr"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iA6-b6-rRM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4743.4782608695659" y="468.75"/>
+        </scene>
     </scenes>
     <resources>
         <image name="lips" width="22" height="8"/>
@@ -185,6 +270,7 @@
         <image name="play" width="128" height="128"/>
         <image name="readed" width="22" height="22"/>
         <image name="starred" width="22" height="22"/>
+        <image name="tag" width="18" height="18"/>
         <image name="trash" width="22" height="22"/>
     </resources>
 </document>
